<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.smehelper.MainActivity">

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="로그아웃"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings12"
        android:orderInCategory="100"
        android:title="@string/action_settings12"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings11"
        android:orderInCategory="100"
        android:title="@string/action_settings11"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings10"
        android:orderInCategory="100"
        android:title="@string/action_settings10"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings5"
        android:orderInCategory="100"
        android:title="@string/action_settings5"
        app:showAsAction="never" />
</menu>